Starting to integrate the API with the needed endpoints for the UI
